css/master.css
@font-face {
  font-family: "futuraBook";
  src: url(../fonts/book.woff2);
}

@font-face {
  font-family: "futuraBold";
  src: url(../fonts/demi.woff2);
}

@font-face {
  font-family: "futuraBkt";
  src: url(../fonts/extrabold.woff);
}

@font-face {
  font-family: "futuraCB";
  src: url(../fonts/Futura-conbold.woff);
}

*{
    box-sizing: border-box;
}

body,html{ margin: 0; padding: 0; height: 100%;}

body{
    color: #fff;
    font-family: "futuraBook";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizelegibility
}

.cover{
    padding: 0px;
    margin: 0px;
    margin-top: 0px;
    height: 100%;
    background: url(../img/cover.jpg) center center;
    background-size: cover;
}

.cover img{
    width: 100%;
    margin: 0px;
    display: block;
}

.column{
    max-width: 750px;
    margin: 0 auto;
}

.column .interior{
    max-width: 550px;
}

.column .interior.larger{
    max-width: 590px;
}

.right .interior{
    margin-left: auto;
    margin-right: 0;
    text-align: right;
}

@media only screen and (max-width: 1000px) {
    .right .interior{
        margin-left: 0;
        margin-right: auto;
        text-align: left;
    }
}

.green{ background: #289548; } .green b{color: #ffd200;}
.yellow{ background: #e8b318; } .yellow b{color: #313777; }
.blue{ background: #313777; } .blue b{color: #e8b318; }
.red{ background: #db0010; }

h2{
    text-transform: uppercase;
    font-family: "futuraBkt";
    letter-spacing: 0.6px;
    font-size: 29px;
    border-top: 10px solid #fff;
    border-bottom: 10px solid #fff;
    padding: 18px 0px;
    margin-bottom: 40px;
}

p.sub{
    font-family: "futuraBold";
    font-size: 28px;
    line-height: 1.1;
    margin-bottom: 30px;
}

p.text{
    font-family: "futuraBold";
    font-size: 19px;
    line-height: 1.2;
    margin-bottom: 16px;
    position: relative;
    text-align: left;
}

.larger .text{
    padding-left: 35px;
}

.text b.number{
    position: absolute;
    left: 0px;
}

@media only screen and (max-width: 1000px) {
    .larger .text{
        padding-left: 20px;
    }
}

.section{
    padding: 40px 15px;
    position: relative;
}

.footer{
    background: #000;
}

.aliados{
    max-width: 1200px;
    margin: 0 auto;
    margin-top: 50px;
    text-align: center;
}

.aliados img{
    vertical-align: middle;
    margin: 15px 30px;
}

@media only screen and (max-width: 1000px) {
    .aliados img{
        margin: 15px;
        transform: scale(0.9);
    }
}

.red{
    position: relative;
}

/* .pnud{
    position: absolute;
    right: 80px;
    bottom: 70px;
} */

/* .pnud img{
    position: relative;
    top: 5px;
    margin-left: 10px;
} */

.pnud{
    text-align: center;
    margin-top: 50px;
    margin-bottom: 30px;
}

@media only screen and (max-width: 1000px) {
    .pnud{
        margin-top: 0px;
        margin-bottom: 0px;
    }
}

.line{
    display: inline-block;
    height: 1px;
    background: linear-gradient(90deg,hsla(0,0%,100%,0),#fff 52.78%,#fff);
    width: 70px;
    position: relative;
    top: -5px;
    margin: 0px 10px;
}

@media only screen and (max-width: 1000px) {
    .line{
        display: none;
    }
}

.line.end{
    transform: rotate(-180deg)
}

.pnud p{
    font-size: 22px;
    font-family: "futuraBold";
    margin-bottom: 5px;
}

.pnud img{
    vertical-align: middle;
    margin-left: 7px;
}

@media only screen and (max-width: 1000px) {
    .pnud img{
        margin-left: 0px;
    }
    .pnud img{
        margin-top: 10px;
    }
}

.footer{
    padding: 120px 0px;
}

@media only screen and (max-width: 1000px) {
    .footer{
        padding: 0px;
    }
}

.redes{
    font-family: "futuraBold";
    border: 7px solid #fff;
    max-width: 800px;
    margin: 0 auto;
    padding: 7px 65px;
}

@media only screen and (max-width: 1000px) {
    .redes{
        padding: 70px 20px;
        padding-bottom: 50px;
        border: none;
    }
}

.footer .first{
    font-family: "futuraBkt";
    text-transform: uppercase;
    letter-spacing: 0.4px;
    line-height: 1.1;
    font-size: 16px;
}

.footer p{
    font-size: 18px;
}

.footer b{
    color: #ffd200;
}

.footer .links{
    margin-top: 30px;
    position: relative;
    text-align: center;
}

@media only screen and (max-width: 1000px) {
    .footer .links{
        text-align: left;
    }
    .footer .links a{
        display: block;
        margin-bottom: 10px;
    }
}

.links .l1{left: 0; position: absolute;}
.links .l3{right: 0; position: absolute;}

@media only screen and (max-width: 1000px) {
    .links .l1, .links .l3{ position: static;}
}

.footer .links img{
    height: 20px;
    vertical-align: middle;
    position: relative;
    top: -2px;
}

.redes a{
    color: #ffd200 !important;
    text-decoration: none !important;
}

.menu{
    background: #000;
    position: fixed;
    width: 100%;
    padding: 20px;
    padding-bottom: 13px;
    top: 0;
    left: 0;
    z-index: 10;
}

.menu .container{
    position: relative;
}

.container{
    max-width: 1200px;
    margin: 0 auto;
}

.right-menu{
    position: absolute;
    right: 0;
    top: 5px;
}

@media only screen and (max-width: 1000px) {
  .right-menu {
      display: none;
  }
}

.right-menu a{
    color: #fff !important;
    text-decoration: none !important;
    text-transform: uppercase;
    font-family: "futuraBkt";
    font-size: 11px;
    letter-spacing: 0.5px;
    margin-left: 30px;
}

.social{
    margin-left: 20px;
}

.social a{
    margin-left: 10px;
}

.right-menu img{
    vertical-align: middle;
    height: 20px;
}

.box{
    font-family: 'futuraCB';
    width: 180px;
    background: #f80016;
    padding: 10px;
    position: absolute;
    right: 70px;
    bottom: 60px;
}

@media only screen and (max-width: 1000px) {
    .box{
        position: static;
        width: 100%;
        margin-top: 40px;
    }
}

.box.boxblue{
    right: auto;
    left: 70px;
    background: #2a347a;
}

.box.boxyellow{
    background: #fab400;
}

.box p{
    text-transform: uppercase;
    margin: 0px;
    padding: 10px;
    font-size: 12px;
    letter-spacing: 0.3px;
    line-height: 1.4;
}

@media only screen and (max-width: 1000px) {
    .box p{
        font-size: 15px;
        letter-spacing: 0.6px;
    }
}

.box .box-white p{
    text-align: left;
    color: #000;
}

.dialog{
    height: 17px;
    display: block;
}

.diasmall{
    position: relative;
    top: -5px;
}

.box small{
    font-family: "futuraBold";
    font-size: 7px;
    text-transform: uppercase;
    letter-spacing: 0.5px;
    margin: 0px;
    position: relative;
    top: -7px;
}

.ama{
    float: right;
}

.box-white{
    background: #fff;
    text-align: center;
}

.micro{
    height: 140px;
    display: block;
    margin: 0 auto;
    padding-top: 30px;
}

